feat: battery icon

--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,6 @@ A non-exhaustive task list
 
 Features
 ====================
-[]      battery icon
 []      activity period
 []      adhoc ping
 []      canned message
@@ -32,7 +31,7 @@ Known Bugs
 [tbc]   detect userinfo (lastheard)
 []      stuck if long-ish button press
 []      T-Echo frontlight: remains on if shutdown while active
-[]      Rare mystery crash on T-Echo while unattended? Todo: setup logging and wait
+[]      Rare phantom user button short-press on T-Echo when unattended for extended period
 []      Timestamps don't update. Needs to happen once a day. "6PM -> Yesterday". Make the WindowManager do it.
 []      Nodelist applet should fill new space from NodeDB when layout changes and applet size increases
 []      Lightsleep shouldn't be possible while update in progress. Set canSleep=false? 
@@ -42,3 +41,4 @@ Chores
 []      Refactor WindowManager::render
 []      Make runOnce methods private
 []      Helper method in InkHUD::Drivers::EInk to simplify framebuffer arithmetic, for anyone else using NicheGraphics
+[]      Don't repeat logs from Applet::getTimeString
