fix: applets shouldn't handle events while deactivated Only one or two applets were actually doing this, but I'm making a habit of having all applets return early from their event handling methods (as good practice), even if those methods are disabled elsewhere (e.g. not observing observable, return false from wantPacket)

--- a/todo.txt
+++ b/todo.txt
@@ -26,6 +26,10 @@ Critical Tasks
 []      imperial units
 []      optimize fast / full referesh: less blinking
 []      handle emoji in shortname
+[]      ble pairing screen
+[]      boot and shutdown screens
+[]      hook reboot to save flash data
+[]      Split requestUpdate and requestAutoshow
 
 Improvements
 ====================
@@ -36,6 +40,7 @@ Improvements
 []      Refactor NodeList applets
 []      Handle layout / applet changes with render(), instead of the "stale render" technique
 []      NodeListApplet should only requestUpdate for changed signal strength if node 0-hops (showing signal bars)
+[]      Descriptive headers for some settings in menu
 
 Known Bugs
 =====================
