--- a/todo.txt
+++ b/todo.txt
@@ -11,11 +11,9 @@ Features
 []      secondary buttons
 []      eink drivers for other devices
 []      gps menu
-[tbc]   autoshow
 []      mini-compass on nodelist
-[wip]   notifications / vetos
 []      additional user applets
-[wip]   add extended ascii / foreign language chars
+[wip]   add extended ascii / foreign language chars - Fonts for Windows-1250, Windows-1251 (Windows-1252?)
 
 
 Critical Tasks
@@ -23,24 +21,23 @@ Critical Tasks
 [tbc]   fix attach/detach interrupts for ButtonThread.cpp
             - check with older ESP32 variants
 []      imperial units
-[]      optimize fast / full referesh: less blinking
-[]      handle emoji in shortname
+[tbc]      optimize fast / full referesh: less blinking
 []      ble pairing screen
 []      boot and shutdown screens
 []      hook reboot to save flash data
-[tbc]   Split requestUpdate and requestAutoshow
+[]      aux button behaviors (set this early: jarring to users if it changes later)
 
 Improvements
 ====================
 []      Nodelist applet should fill new space from NodeDB when layout changes and applet size increases, or when recents duration increases
 []      Better detection of position changes in PositionsApplet
-[]      Don't show hops in nodelist applets if unknown
+[]      Don't show signal strength in ChronoListApplets if hops unknown
 []      Refactor WindowManager::render
 []      Refactor ChronoList applets
 []      Handle layout / applet changes with render(), instead of the "stale render" technique
 []      ChronoListApplet should only requestUpdate for changed signal strength if node 0-hops (showing signal bars)
 []      Descriptive headers for some settings in menu
-[]      Re-render applets when RTC is set. Some UI elements change (e.g. "Recents" applet counts) 
+[]      Re-render applets when RTC is set. Some UI elements change (e.g. "Recents" applet counts)
 
 Known Bugs
 =====================
