refactor: renaming Applet::render becomes Applet::onRender. Tile::displayedApplet becomes Tile::assignedApplet. New onRender method name allows us to move some of the pre and post render code from WindowManager into new Applet::render method, which will call onRender for us.

--- a/todo.txt
+++ b/todo.txt
@@ -22,6 +22,7 @@ Critical Tasks
 []      ble pairing screen
 []      boot and shutdown screens
 []      hook reboot to save flash data
+[]      hotfix for handling emoji tapbacks
 
 Improvements
 ====================
