--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,6 @@ Features
 Critical Tasks
 ====================
 []      imperial units
-[]      hook reboot to save flash data
 []      remove "not yet implemented" menu items
 
 Improvements
@@ -29,7 +28,8 @@ Improvements
 []      Descriptive headers for some settings in menu
 []      Re-render applets when RTC is set. Some UI elements change (e.g. "Recents" applet counts)
 []      Re-render all applets every time we update. Apparently it's faster to re-render than to blank the pixels for just one tile
-[]      SNR from NodeDB. No need to remember this manually anymore!
+[]      SNR from NodeDB, maybe? Not sure if RSSI is stored; not sure if we can determinal signal strength without RSSI.
+[]      Don't save on shutdown / reboot within N seconds of boot. Protect flash against weird boot loops.
 
 Known Bugs
 =====================
