--- a/todo.txt
+++ b/todo.txt
@@ -23,28 +23,27 @@ Improvements
 []      Nodelist applet should fill new space from NodeDB when layout changes and applet size increases, or when recents duration increases
 []      Better detection of position changes in PositionsApplet
 []      Don't show signal strength in ChronoListApplets if hops unknown
-[]      Refactor WindowManager::render
 []      Refactor ChronoList applets
 []      ChronoListApplet should only requestUpdate for changed signal strength if node 0-hops (showing signal bars)
 []      Descriptive headers for some settings in menu
 []      Re-render applets when RTC is set. Some UI elements change (e.g. "Recents" applet counts)
-[]      Re-render all applets every time we update. Apparently it's faster to re-render than to blank the pixels for just one tile
 []      SNR from NodeDB, maybe? Not sure if RSSI is stored; not sure if we can determinal signal strength without RSSI.
 []      Don't save on shutdown / reboot within N seconds of boot. Protect flash against weird boot loops.
+[]      Applet to display critical faults
+[]      OEM Bootscreen
 
 Known Bugs
 =====================
 []      ChronoList applets: no event raised on nodeinfo rx
-[]      (Rare) phantom user button short-press on T-Echo when unattended for extended period
 []      Timestamps don't update. Needs to happen once a day. "6PM -> Yesterday". Make the WindowManager do it.
 []      Lightsleep shouldn't be possible while update in progress. Set canSleep=false? 
 []      Root menu: header breaks spacing if rtc set while menu open
 []      Applets don't re-render when node is removed via admin command
-[]      Autoshow focusing oldest of two competing requests, if render is deferred
 []      (Rare) Recents List: count in header label may not match number of items shown
 []      (Rare) Menu stuck after changing tile using aux button
 []      Tile highlight rendered below header for threaded message applets
 []      ChronoList applets: *very* large distances spill over the divider
+[]      Menu cursor does not always return to top when exited
 
 Chores
 ==========
