refactor: use a common pio base config Easier to make any future PlatformIO config changes

--- a/todo.txt
+++ b/todo.txt
@@ -15,33 +15,27 @@ Features
 
 Critical Tasks
 ====================
-Currently, none 🎉
+[]      Make setting-persistence more intuitive
 
 Improvements
 ====================
-[]      Nodelist applet should fill new space from NodeDB when layout changes and applet size increases, or when recents duration increases
 []      Better detection of position changes in PositionsApplet
-[]      Don't show signal strength in ChronoListApplets if hops unknown
-[]      Refactor ChronoList applets
-[]      ChronoListApplet should only requestUpdate for changed signal strength if node 0-hops (showing signal bars)
+[]      NodeListApplets should only requestUpdate for changed signal strength if node 0-hops (showing signal bars)
 []      Descriptive headers for some settings in menu
 []      Re-render applets when RTC is set. Some UI elements change (e.g. "Recents" applet counts)
-[]      SNR from NodeDB, maybe? Not sure if RSSI is stored; not sure if we can determinal signal strength without RSSI.
 []      Don't save on shutdown / reboot within N seconds of boot. Protect flash against weird boot loops.
 []      Applet to display critical faults
 []      OEM Bootscreen
-[]      Aux button: exit menu without switching tile focus
+[]      Aux button: exit menu without switching tile focus,
+[]      Tips at first boot (set region, how to use menu, etc). Could also catch common mistakes (not shutting down correctly, attempt to rotate via app, etc)
 
 Known Bugs
 =====================
-[]      ChronoList applets: no event raised on nodeinfo rx
 []      Timestamps don't update. Needs to happen once a day. "6PM -> Yesterday". Make the WindowManager do it.
 []      Root menu: header breaks spacing if rtc set while menu open
 []      Applets don't re-render when node is removed via admin command
-[]      (Rare) Recents List: count in header label may not match number of items shown
-[]      (Rare) Menu stuck after changing tile using aux button
 []      Tile highlight rendered below header for threaded message applets
-[]      ChronoList applets: *very* large distances spill over the divider
+[]      NodeListApplets: *very* large distances spill over the divider
 []      Menu cursor does not always return to top when exited
 []      ThreadedMessageApplet: text wrapping issues with very long words (i.e. URLs)
 
